@@ -50,9 +50,10 @@ AT_XFAIL_IF([m4_default([$4], [false])])
 cp $abs_srcdir/$1.stdout expout
 
 # Update version in expout to avoid regenerating stdout files at each commit
+package_version=AT_PACKAGE_VERSION
 sed -i \
-    -e "s/^# Generated by RobOptim core library .*$/# Generated by RobOptim core library $VERSION/"	\
-    expout
+-e "s/^\# Generated by RobOptim core library .*$/# Generated by RobOptim core library $package_version/" \
+expout
 
 TESTCASE=`which $1`
 echo "$at_srcdir/AT_LINE: $CHECK_PREFIX $TESTCASE"
